--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="static/css/style.css">
+  <style>
+    body {
+      background-color: #1e0031;
+    }
+  </style>
 </head>
 
 <body>
@@ -34,12 +39,13 @@
               <div class="panel-body">
                 <form>
                   <div class="form-group">
-                    <ul class="list-group" id="filters">
-                      <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
-                      </li>
-                    </ul>
+                    <input type="button" class="btn btn-default" value="Clear Filter" onclick="resetForm(this);"/>
+                      <ul class="list-group" id="filters">
+                        <li class="filter list-group-item">
+                          <label for="date">Enter a Date <br>(M/D/YYYY)</label>
+                          <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        </li>
+                      </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
@@ -68,7 +74,7 @@
       </div>
     </div>
     <footer class="footer">
-      <span class="bottom">UFO Sightings</span>
+      <div style="color: whitesmoke" class="footer-copyright text-center py-3"><heavy>UFO Sightings<br>© Copyright Data Bootcamp 2021</heavy></div>
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
