--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="static/css/style.css">
+  <style>
+    body {
+      background-color: #1e0031;
+    }
+  </style>
 </head>
 
 <body>
