--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>UFO Finder</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UFO Finder</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="static/css/style.css">
-  <style>
-    body {
-      background-color: #1e0031;
-    }
-  </style>
+  <style>body {background-color: #1e0031}</style>
 </head>
 
 <body>
@@ -20,7 +17,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">UFO Sightings
+          <a class="navbar-brand" href="index.html"><heavy>UFO Sightings</heavy>
             <img class="nav-ufo" src="static/images/ufo.svg">
           </a>
         </div>
@@ -39,10 +36,27 @@
               <div class="panel-body">
                 <form>
                   <div class="form-group">
+                   <input type="button" class="btn btn-default" value="Clear Filters" onclick="clearFilter(this);"/>
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <label for="date">Enter a Date<br>up to 1/13/2010</label>
+                        <input class="form-control" id="datetime" type="text" placeholder="ex: M/D/YYYY">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="ex: san diego">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="state">Enter a State</label>
+                        <input class="form-control" id="state" type="text" placeholder="ex: ny">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="country">Enter a Country</label>
+                        <input class="form-control" id="country" type="text" placeholder="ex: us or ca">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="shape">Enter a Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="ex: disk">
                       </li>
                     </ul>
                   </div>
@@ -73,7 +87,7 @@
       </div>
     </div>
     <footer class="footer">
-      <span class="bottom">UFO Sightings</span>
+      <div style="color: whitesmoke" class="footer-copyright text-center py-3"><heavy>UFO Sightings<br>© Copyright Data Bootcamp 2021</heavy></div>
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
