--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="col-md-10">
           <div id="table-area" class="">
-            <table id="ufo-table" class="table table-striped">
+            <table id="ufo-table" class="table table-dark table-striped">
               <thead>
                 <tr>
                   <th scope="col" class="table-head">Date</th>
