--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -36,7 +36,7 @@
               <div class="panel-body">
                 <form>
                   <div class="form-group">
-                   <input type="button" class="btn btn-default" value="Clear Filters" onclick="clearFilter(this);"/>
+                   <input type="button" class="btn btn-dark" value="Clear Filters" onclick="clearFilter(this);"/>
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date<br>up to 1/13/2010</label>
@@ -60,7 +60,7 @@
                       </li>
                     </ul>
                   </div>
-                  <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
                 </form>
               </div>
             </div>
